--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,7 +30,12 @@ nav ul li {
 }
 nav ul li:nth-child(2) {
   float: left;
-  margin-left: 1em;  
+  margin-left: 1em;
+}
+nav ul li:nth-child(3) {
+  margin-top: 0.8em;
+  float: left;
+  margin-left: 1em;
 }
 .results {
   margin-top: 10px;
