disable submit for authenticated voter

--- a/src/app/profile.component.html
+++ b/src/app/profile.component.html
@@ -184,7 +184,7 @@
             </div><br>
           </div>
           <alert></alert>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" [disabled]="auth">Submit</button>
         </div>
       </form>
     </tab>
